# spur-python

./: .gitignore  ISSUES.md  LICENSE  README.md  debug_spurtest.do  example.py  generate_mc_convergence.py  generate_report_figures.py  plot_speed_comparison.py  pyproject.toml  report.qmd  requirements.txt  speed_tests_python.py  speed_tests_stata.do  spur.py  spurhalflife.py  spurtest.py  spurtest_i0_debug.do  validate_against_stata.py  validate_chetty.py  validate_resid_tests.do  validate_spurtest.py
examples/: spur_pipeline.py  spurhalflife.py  spurtest.py  spurtransform.py
figures/: mc_convergence_data.json  speed_comparison.csv  speed_summary.csv  speed_test_results.json
scripts/: generate_mc_convergence.py  generate_report_figures.py  mc_variability_test.do  plot_speed_comparison.py  speed_tests_python.py  spurtest_large_nrep.do  spurtest_run.do  validate_against_stata.py  validate_chetty.py  validate_halflife.do  validate_spurtest.py  validation_run.do
src/: __init__.py  spur.py  spurhalflife.py  spurtest.py
tests/: config.py  test_cholesky_upper.py  test_cluster_matrix.py  test_data.py  test_demean_matrix.py  test_get_R.py  test_get_cbar.py  test_get_distance_matrix.py  test_get_distmat_normalized.py  test_get_ha_param_i0.py  test_get_ha_param_i1.py  test_get_ha_param_i1_residual.py  test_get_ha_parm_I0.py  test_get_ha_parm_I1.py  test_get_ha_parm_I1_residual.py  test_get_pow_qf.py  test_get_sigma_dm.py  test_get_sigma_lbm.py  test_get_sigma_residual.py  test_get_transformation_stats.py  test_getcbar.py  test_getpow_qf.py  test_haversine_distance.py  (+24 more)
(+12 files in other folders)
