[project]
name = "spur-python"
version = "0.1.0"
description = "spatial error dependence diagnostics based on Müller-Watson, Econometrica 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8", # DG this should not be a main dependency imho
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]

[project.scripts]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"                 

[tool.setuptools.packages.find]
where = ["src"]
